--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click==8.1.3
 contourpy==1.1.0
 cycler==0.11.0
 dataclasses-json==0.5.8
+dnspython==2.3.0
 fastapi==0.98.0
 ffmpy==0.3.0
 filelock==3.12.2
@@ -56,6 +57,7 @@ Pillow==9.5.0
 pydantic==1.10.9
 pydub==0.25.1
 Pygments==2.15.1
+pymongo==4.4.0
 pyparsing==3.1.0
 pyrsistent==0.19.3
 python-dateutil==2.8.2
