--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,5 +38,8 @@ jobs:
       run: |
         pytest
     - name: Integration tests
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        SLACK_TEST_BOT_TOKEN: ${{ secrets.SLACK_TEST_BOT_TOKEN }}
       run: |
         pytest -m integration
