--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,6 @@ filelock==3.12.2
 fonttools==4.40.0
 frozenlist==1.3.3
 fsspec==2023.6.0
-gpt-index==0.4.24
 gradio==3.35.2
 gradio_client==0.2.7
 h11==0.14.0
@@ -27,13 +26,15 @@ httpcore==0.17.2
 httpx==0.24.1
 huggingface-hub==0.15.1
 idna==3.4
+iniconfig==2.0.0
 Jinja2==3.1.2
 joblib==1.3.0
 jsonschema==4.17.3
 kiwisolver==1.4.4
-langchain==0.0.153
-langchainplus-sdk==0.0.17
+langchain==0.0.223
+langchainplus-sdk==0.0.20
 linkify-it-py==2.0.2
+llama-index==0.7.1
 markdown-it-py==2.2.0
 MarkupSafe==2.1.3
 marshmallow==3.19.0
@@ -44,6 +45,7 @@ mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
+nest-asyncio==1.5.6
 networkx==3.1
 nltk==3.8.1
 numexpr==2.8.4
@@ -54,12 +56,14 @@ orjson==3.9.1
 packaging==23.1
 pandas==2.0.2
 Pillow==9.5.0
+pluggy==1.2.0
 pydantic==1.10.9
 pydub==0.25.1
 Pygments==2.15.1
 pymongo==4.4.0
 pyparsing==3.1.0
 pyrsistent==0.19.3
+pytest==7.4.0
 python-dateutil==2.8.2
 python-multipart==0.0.6
 pytz==2023.3
