Added api tests

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -48,3 +48,15 @@ jobs:
         DB_NAME: ${{ secrets.DB_NAME }}
       run: |
         pytest -m integration
+
+    - name: API Tests
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        SLACK_APP_TOKEN: ${{ secrets.SLACK_APP_TOKEN }}
+        SLACK_TEST_BOT_TOKEN: ${{ secrets.SLACK_TEST_BOT_TOKEN }}
+        MONGO_CONNECTION_STRING_TEMPLATE: ${{ secrets.MONGO_CONNECTION_STRING_TEMPLATE }}
+        MONGO_USERNAME: ${{ secrets.MONGO_USERNAME }}
+        MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
+        DB_NAME: ${{ secrets.DB_NAME }}
+      run: |
+        pytest -m api
