--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 addopts = -m "not integration"
 markers =
     integration: marks tests as integration tests (deselect with '-m "not integration"')
+    api: marks tests as API tests (deselect with '-m "not api"')
