--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==23.1.0
 aiohttp==3.8.4
 aiosignal==1.3.1
 altair==5.0.1
+annotated-types==0.5.0
 anyio==3.7.0
 async-timeout==4.0.2
 attrs==23.1.0
@@ -13,7 +14,8 @@ contourpy==1.1.0
 cycler==0.11.0
 dataclasses-json==0.5.8
 dnspython==2.3.0
-fastapi==0.98.0
+email-validator==2.0.0.post2
+fastapi==0.100.0
 ffmpy==0.3.0
 filelock==3.12.2
 fonttools==4.40.0
@@ -23,15 +25,17 @@ gradio==3.35.2
 gradio_client==0.2.7
 h11==0.14.0
 httpcore==0.17.2
+httptools==0.6.0
 httpx==0.24.1
 huggingface-hub==0.15.1
 idna==3.4
 iniconfig==2.0.0
+itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.3.0
 jsonschema==4.17.3
 kiwisolver==1.4.4
-langchain==0.0.223
+langchain==0.0.229
 langchainplus-sdk==0.0.20
 linkify-it-py==2.0.2
 llama-index==0.7.1
@@ -57,7 +61,10 @@ packaging==23.1
 pandas==2.0.2
 Pillow==9.5.0
 pluggy==1.2.0
-pydantic==1.10.9
+pydantic==1.10.11
+pydantic-extra-types==2.0.0
+pydantic-settings==2.0.1
+pydantic_core==2.1.2
 pydub==0.25.1
 Pygments==2.15.1
 pymongo==4.4.0
@@ -65,6 +72,7 @@ pyparsing==3.1.0
 pyrsistent==0.19.3
 pytest==7.4.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-multipart==0.0.6
 pytz==2023.3
 PyYAML==6.0
@@ -94,10 +102,13 @@ torchvision==0.15.2
 tqdm==4.65.0
 transformers==4.30.2
 typing-inspect==0.8.0
-typing_extensions==4.5.0
+typing_extensions==4.7.1
 tzdata==2023.3
 uc-micro-py==1.0.2
+ujson==5.8.0
 urllib3==1.26.16
 uvicorn==0.22.0
+uvloop==0.17.0
+watchfiles==0.19.0
 websockets==11.0.3
 yarl==1.9.2
