--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,13 @@
-aiofiles==23.1.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-altair==5.0.1
-annotated-types==0.5.0
-anyio==3.7.0
-async-timeout==4.0.2
-attrs==23.1.0
-beautifulsoup4==4.12.2
 certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-contourpy==1.1.0
-cycler==0.11.0
-dataclasses-json==0.5.8
-dnspython==2.3.0
-email-validator==2.0.0.post2
 fastapi==0.100.0
-ffmpy==0.3.0
-filelock==3.12.2
-fonttools==4.40.0
-frozenlist==1.3.3
-fsspec==2023.6.0
-gradio==3.35.2
-gradio_client==0.2.7
-h11==0.14.0
-httpcore==0.17.2
-httptools==0.6.0
-httpx==0.24.1
-huggingface-hub==0.15.1
-idna==3.4
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.3.0
-jsonschema==4.17.3
-kiwisolver==1.4.4
-langchain==0.0.229
-langchainplus-sdk==0.0.20
-linkify-it-py==2.0.2
-llama-index==0.7.1
-markdown-it-py==2.2.0
-MarkupSafe==2.1.3
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib==3.7.1
-mdit-py-plugins==0.3.3
-mdurl==0.1.2
-mpmath==1.3.0
-multidict==6.0.4
-mypy-extensions==1.0.0
-nest-asyncio==1.5.6
-networkx==3.1
-nltk==3.8.1
-numexpr==2.8.4
-numpy==1.25.0
-openai==0.27.8
-openapi-schema-pydantic==1.2.4
-orjson==3.9.1
-packaging==23.1
-pandas==2.0.2
-Pillow==9.5.0
-pluggy==1.2.0
-pydantic-extra-types==2.0.0
-pydantic-settings==2.0.1
-pydantic_core==2.1.2
-pydub==0.25.1
-Pygments==2.15.1
+gpt_index==0.7.7
+gradio==3.36.1
+langchain==0.0.232
+llama_index==0.7.1
+pydantic==1.10.11
 pymongo==4.4.0
-pyparsing==3.1.0
-pyrsistent==0.19.3
 pytest==7.4.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-multipart==0.0.6
-pytz==2023.3
-PyYAML==6.0
-regex==2023.6.3
-requests==2.31.0
-safetensors==0.3.1
-scikit-learn==1.2.2
-scipy==1.11.1
-semantic-version==2.10.0
-sentence-transformers==2.2.2
-sentencepiece==0.1.99
-six==1.16.0
-slack-bolt==1.18.0
-slack-sdk==3.21.3
-sniffio==1.3.0
-soupsieve==2.4.1
-SQLAlchemy==2.0.17
-starlette==0.27.0
-sympy==1.12
-tenacity==8.2.2
-threadpoolctl==3.1.0
-tiktoken==0.4.0
-tokenizers==0.13.3
-toolz==0.12.0
-torch==2.0.1
-torchvision==0.15.2
-tqdm==4.65.0
-transformers==4.30.2
-typing-inspect==0.8.0
-tzdata==2023.3
-uc-micro-py==1.0.2
-ujson==5.8.0
-urllib3==1.26.16
+Requests==2.31.0
+slack_bolt==1.18.0
+slack_sdk==3.21.3
 uvicorn==0.22.0
-uvloop==0.17.0
-watchfiles==0.19.0
-websockets==11.0.3
-yarl==1.9.2
