Added test on collection saving and querying

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -m "not integration"
+addopts = -m "not integration" -m "not api"
 markers =
     integration: marks tests as integration tests (deselect with '-m "not integration"')
     api: marks tests as API tests (deselect with '-m "not api"')
