--- a/GPTBackendServer/build.gradle
+++ b/GPTBackendServer/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation("org.http4k:http4k-security-oauth:${http4kVersion}")
     implementation("org.http4k:http4k-server-undertow:${http4kVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
+    implementation("org.webjars:swagger-ui:3.25.2")
     testImplementation("org.http4k:http4k-testing-approval:${http4kVersion}")
     testImplementation("org.http4k:http4k-testing-hamkrest:${http4kVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
