--- a/GPTBackendServer/build.gradle
+++ b/GPTBackendServer/build.gradle
@@ -44,9 +44,11 @@ dependencies {
     implementation("org.http4k:http4k-server-undertow:${http4kVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     implementation("org.webjars:swagger-ui:3.25.2")
+    implementation("org.litote.kmongo:kmongo:4.9.0")
     testImplementation("org.http4k:http4k-testing-approval:${http4kVersion}")
     testImplementation("org.http4k:http4k-testing-hamkrest:${http4kVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    testImplementation("io.mockk:mockk:${mockkVersion}")
 }
 
