Added mongo knowledge file persistence

--- a/GPTBackendServer/build.gradle
+++ b/GPTBackendServer/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     implementation("org.webjars:swagger-ui:3.25.2")
     implementation("org.litote.kmongo:kmongo:4.9.0")
+    implementation("io.arrow-kt:arrow-core:1.2.0")
     testImplementation("org.http4k:http4k-testing-approval:${http4kVersion}")
     testImplementation("org.http4k:http4k-testing-hamkrest:${http4kVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
