--- a/GPTBackendServer/build.gradle
+++ b/GPTBackendServer/build.gradle
@@ -53,5 +53,10 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
     testImplementation("io.mockk:mockk:${mockkVersion}")
+    testImplementation("org.testcontainers:testcontainers:1.18.3")
+    testImplementation("org.testcontainers:junit-jupiter:1.18.3")
+    testImplementation("org.testcontainers:mongodb:1.18.3")
+    testImplementation("org.litote.kmongo:kmongo:4.9.0")
+
 }
 
