--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,6 +29,7 @@ jobs:
           distribution: 'temurin'
       - name: Build with Gradle
         run: |
+          /home/linuxbrew/.linuxbrew/bin/brew shellenv
           brew install gradle
           cd GPTBackendServer
           gradle clean
