--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,10 +27,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Set up homebrew
-        run: /home/linuxbrew/.linuxbrew/bin/brew shellenv
       - name: Build with Gradle
         run: |
-          brew install gradle
           cd GPTBackendServer
-          gradle clean
+          sh gradlew
