Manual gradle test

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build with Gradle
         run: |
           cd GPTBackendServer
-          sh gradlew
+          sh gradlew build
       - name: Test with Gradle
         run: |
           cd GPTBackendServer
