--- a/GPTBackendServer/build.gradle
+++ b/GPTBackendServer/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation("org.http4k:http4k-format-jackson:${http4kVersion}")
     implementation("org.http4k:http4k-security-oauth:${http4kVersion}")
     implementation("org.http4k:http4k-server-undertow:${http4kVersion}")
+    implementation("org.http4k:http4k-cloudnative:${http4kVersion}")
     implementation("org.http4k:http4k-multipart:${http4kVersion}t")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     implementation("org.webjars:swagger-ui:3.25.2")
