Fixing front end

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,15 +27,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
+        cd LLMServer
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        cd LLMServer
         pytest
     - name: Integration tests
       env:
@@ -47,6 +43,7 @@ jobs:
         MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
         DB_NAME: ${{ secrets.DB_NAME }}
       run: |
+        cd LLMServer
         pytest -m integration
 
     - name: API Tests
@@ -59,4 +56,5 @@ jobs:
         MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
         DB_NAME: ${{ secrets.DB_NAME }}
       run: |
+        cd LLMServer
         pytest -m api
