--- a/GPTBackendServer/build.gradle
+++ b/GPTBackendServer/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation("org.webjars:swagger-ui:3.25.2")
     implementation("org.litote.kmongo:kmongo:4.9.0")
     implementation("io.arrow-kt:arrow-core:1.2.0")
+    implementation platform('com.google.cloud:libraries-bom:26.22.0')
+    implementation('com.google.cloud:google-cloud-storage')
     testImplementation("org.http4k:http4k-testing-approval:${http4kVersion}")
     testImplementation("org.http4k:http4k-testing-hamkrest:${http4kVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
