Setting up circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: '2.1'
 orbs:
   gradle: circleci/gradle@3.0.0
+  node: circleci/node@3.0.0
+  python: circleci/python@3.0.0
 workflows:
   checkout-build-test:
     jobs:
