--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,7 @@ jobs:
     executor: node/default # use the default executor defined within the orb
     working_directory: ~/frontend/frontend-app
     steps:
-      - checkout:
-          path: ~/frontend
+      - checkout
       - node/install-packages:
           pkg-manager: npm
       - run:
