--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,10 @@ jobs:
   node_build_test: # this can be any name you choose
     executor: node/default # use the default executor defined within the orb
     steps:
-      - checkout:
-          path: ~/frontend/frontend-app
+      - checkout
       - node/install-packages:
           pkg-manager: npm
+          app-dir: ~/frontend/frontend-app
       - run:
           command: npm run test
           name: Run tests
