--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   node_build_test: # this can be any name you choose
     executor: node/default # use the default executor defined within the orb
-    working-directory: ~/project/frontend/frontend-app
+    working_directory: ~/project/frontend/frontend-app
     steps:
       - checkout
       - node/install-packages:
