--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ workflows:
       - node_build_test
       - node_docker
       - docker/publish:
-#            path: frontend/frontend-app/
+            path: frontend/frontend-app/
             before_build:
               - run:
                   command: cd frontend/frontend-app
