--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,10 +35,10 @@ workflows:
       - node_docker
       - docker/publish:
             path: frontend/frontend-app/
-            image: neeleshrav/knowledgespacesui
+            image: neeleshrav/knowledgespacesui:latest
   python-publish:
     jobs:
       - docker/publish:
           path: LLMServer/
-          image: neeleshrav/knowledgespacesllm
+          image: neeleshrav/knowledgespacesllm:latest
 
