--- a/frontend/frontend-app/admin/app-deployment.yaml
+++ b/frontend/frontend-app/admin/app-deployment.yaml
@@ -18,7 +18,7 @@ spec:
         tier: backend
     spec:
       containers:
-        - image: neeleshrav/knowledgespacesui:1a4cfbde3a092dda809677adcf6355330512ce04
+        - image: neeleshrav/knowledgespacesui:latest
           name: rusty-pangolin
           ports:
             - containerPort: 5173
