Trying GKE deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
           components: kubectl
       - gcp-gke/create-cluster:
           cluster: gcp-testing
+          autopilot: true
           additional_args: --disk-size=100.0
       - gcp-gke/rollout-image:
           deployment: gcp-testing
