--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,10 +67,11 @@ jobs:
           components: kubectl
       - run:
           command: |
+            gcloud container clusters create llm-cluster --disk-type pd-standard --max_nodes 2
             gcloud container clusters list
-            gcloud container clusters get-credentials llm-cluster
+            gcloud container clusters get-credentials backend-cluster
             kubectl config current-context
-            cd LLMServer
+            cd GPTBackendServer
             kubectl apply --validate=true --dry-run=true -f admin/
             kubectl apply --validate=true -f admin/
             sleep 30
