Adding prefix to frontend

--- a/frontend/frontend-app/Dockerfile
+++ b/frontend/frontend-app/Dockerfile
@@ -4,6 +4,8 @@ COPY frontend/frontend-app .
 RUN ls
 RUN npm install
 EXPOSE 5173:5173
+ARG VITE_BACKEND_PREFIX
+ENV VITE_BACKEND_PREFIX=$VITE_BACKEND_PREFIX
 RUN npm run build
 RUN npm install -g serve
 ENTRYPOINT ["serve", "-s", "dist", "-l", "5173"]
