Setting up backend environment variables

--- a/LLMServer/Dockerfile
+++ b/LLMServer/Dockerfile
@@ -1,5 +1,13 @@
 FROM python:bullseye
 WORKDIR /app
+ARG DB_NAME
+ENV DB_NAME=$DB_NAME
+ARG MONGO_CONNECTION_STRING_TEMPLATE
+ENV MONGO_CONNECTION_STRING_TEMPLATE=$MONGO_CONNECTION_STRING_TEMPLATE
+ARG MONGO_PASSWORD
+ENV MONGO_PASSWORD=$MONGO_PASSWORD
+ARG MONGO_USERNAME
+ENV MONGO_USERNAME=$MONGO_USERNAME
 COPY LLMServer .
 RUN ls
 RUN pip install -r requirements.txt
