Setting up backend environment variables

--- a/LLMServer/Dockerfile
+++ b/LLMServer/Dockerfile
@@ -4,10 +4,10 @@ ARG DB_NAME
 ENV DB_NAME=$DB_NAME
 ARG MONGO_CONNECTION_STRING_TEMPLATE
 ENV MONGO_CONNECTION_STRING_TEMPLATE=$MONGO_CONNECTION_STRING_TEMPLATE
-ARG MONGO_PASSWORD
-ENV MONGO_PASSWORD=$MONGO_PASSWORD
-ARG MONGO_USERNAME
-ENV MONGO_USERNAME=$MONGO_USERNAME
+ARG MONGO_DB_PASSWORD
+ENV MONGO_DB_PASSWORD=$MONGO_DB_PASSWORD
+ARG MONGO_DB_USERNAME
+ENV MONGO_DB_USERNAME=$MONGO_DB_USERNAME
 COPY LLMServer .
 RUN ls
 RUN pip install -r requirements.txt
