--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,6 +104,7 @@ workflows:
           path: LLMServer/
           image: neeleshrav/knowledgespacesllm
           tag: latest
+          extra-build-args: --build-arg DB_NAME=$DB_NAME --build-arg MONGO_CONNECTION_STRING_TEMPLATE=$MONGO_CONNECTION_STRING_TEMPLATE --build-arg MONGO_DB_PASSWORD=$MONGO_DB_PASSWORD --build-arg MONGO_DB_USERNAME=$MONGO_DB_USERNAME
       - deploy-llm:
           requires:
             - docker/publish
