--- a/frontend/frontend-app/Dockerfile
+++ b/frontend/frontend-app/Dockerfile
@@ -6,6 +6,7 @@ RUN npm install
 EXPOSE 5173:5173
 ARG VITE_BACKEND_PREFIX
 ENV VITE_BACKEND_PREFIX=$VITE_BACKEND_PREFIX
+RUN echo $VITE_BACKEND_PREFIX
 RUN npm run build
 RUN npm install -g serve
 ENTRYPOINT ["serve", "-s", "dist", "-l", "5173"]
