--- a/GPTBackendServer/admin/app-deployment.yaml
+++ b/GPTBackendServer/admin/app-deployment.yaml
@@ -13,6 +13,7 @@ spec:
     type: Recreate
   template:
     metadata:
+      namespace: cloud-storage-namespace
       labels:
         app: ci-deploy
         tier: backend
