using correct namespace for backend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,7 @@ jobs:
             gcloud iam service-accounts add-iam-policy-binding iam-service-account@knowledgespaces.iam.gserviceaccount.com --role roles/iam.workloadIdentityUser --member "serviceAccount:knowledgespaces.svc.id.goog[cloud-storage-namespace/ksa-service-account]"
             kubectl annotate serviceaccount ksa-service-account --namespace cloud-storage-namespace iam.gke.io/gcp-service-account=iam-service-account@knowledgespaces.iam.gserviceaccount.com
             kubectl apply --validate=true --dry-run=true -f admin/
-            kubectl replace --validate=true -f admin/ --force
+            kubectl replace --validate=true -f admin/ --force --namespace=cloud-storage-namespace
             sleep 30
             kubectl get services
 workflows:
