--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ jobs:
       - checkout
       - gcp-cli/setup:
           components: kubectl
+          google_compute_zone: GOOGLE_COMPUTE_ZONE_3
       - run:
           command: |
             gcloud container clusters list
